.testrepository/444
time: 2014-01-29 13:08:46.114100Z
tags: worker-0
test: setUpClass (tempest.scenario.test_volume_boot_pattern.TestVolumeBootPattern)
time: 2014-01-29 13:08:46.114100Z
failure: setUpClass (tempest.scenario.test_volume_boot_pattern.TestVolumeBootPattern) [ multipart
Content-Type: text/x-traceback;charset="utf8",language="python"
traceback
630
Traceback (most recent call last):
  File "/home/os1/tempest/tempest/scenario/test_volume_boot_pattern.py", line 48, in setUpClass
    super(TestVolumeBootPattern, cls).setUpClass()
  File "/home/os1/tempest/tempest/scenario/manager.py", line 500, in setUpClass
    super(NetworkScenarioTest, cls).setUpClass()
  File "/home/os1/tempest/tempest/scenario/manager.py", line 213, in setUpClass
    cls.manager = OfficialClientManager(username, password, tenant_name)
  File "/home/os1/tempest/tempest/scenario/manager.py", line 77, in __init__
    tenant_name)
  File "/home/os1/tempest/tempest/scenario/manager.py", line 124, in _get_volume_client
    http_log_debug=True)
  File "/usr/local/lib/python2.7/dist-packages/cinderclient/client.py", line 413, in Client
    client_class = get_client_class(version)
  File "/usr/local/lib/python2.7/dist-packages/cinderclient/client.py", line 409, in get_client_class
    return utils.import_class(client_path)
  File "/usr/local/lib/python2.7/dist-packages/cinderclient/utils.py", line 286, in import_class
    __import__(mod_str)
  File "/usr/local/lib/python2.7/dist-packages/cinderclient/v1/__init__.py", line 17, in <module>
    from cinderclient.v1.client import Client     # noqa
  File "/usr/local/lib/python2.7/dist-packages/cinderclient/v1/client.py", line 24, in <module>
    from cinderclient.v1 import volume_snapshots
  File "/usr/local/lib/python2.7/dist-packages/cinderclient/v1/volume_snapshots.py", line 148
    sys.stdout.write(base.getid(snapshot)))
                                          ^
SyntaxError: invalid syntax
0
]
tags: -worker-0
time: 2014-01-29 13:08:46.207483Z
tags: worker-0
test: process-returncode
time: 2014-01-29 13:08:46.207483Z
failure: process-returncode [ multipart
Content-Type: test/plain;charset=utf8
traceback
C
returncode 10
]
tags: -worker-0
